[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quantum-hybrid-graph"
version = "0.1.0"
description = "Quantum-inspired hybrid evolutionary graph analysis and optimization toolkit."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "QuantumHybridGraph contributors" }
]
keywords = [
  "graphs",
  "networkx",
  "quantum-inspired",
  "qaoa",
  "grover",
  "optimization",
  "network-analysis"
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Scientific/Engineering :: Mathematics"
]
dependencies = [
  "networkx>=3.2",
  "numpy>=1.26"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.6",
  "build>=1.2"
]
quantum = [
  "qiskit>=1.0",
  "qiskit-aer>=0.14",
  "qiskit-algorithms>=0.3",
  "pennylane>=0.36"
]

[project.urls]
Homepage = "https://github.com/YOUR_USERNAME/quantum-hybrid-graph"
Repository = "https://github.com/YOUR_USERNAME/quantum-hybrid-graph"
Issues = "https://github.com/YOUR_USERNAME/quantum-hybrid-graph/issues"

[tool.setuptools]
py-modules = ["quantum_hybrid_graph"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 140
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]
